# my-first-solana-program-2

./: ABC32BCtVq6jMeHHggFqPDPCsakL6oK7rX2YNv83VPuV.json  Cargo.toml  JJJ1zWC9EzfoDsJQPQdgkLGRseBgcDd62nNriE4m46w.json
client/: my-first-solana-program-test.ts
src/: a.rs  lib.rs
