[package]
name = "my-first-solana-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.16.18"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

